MSM 8064AA: CPU and L2 Overclocking
CPU and L2 overclocking for Flo/Deb

based on Faux123's work:
https://github.com/faux123/flo_nexus7/commit/06e1e0b26d7f94f8147530b6be29bd1ee9ab85a5

Signed-off-by: Kostas K. <mpokwsths@gmail.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1564,6 +1564,12 @@ config MSM_CPU_VOLTAGE_CONTROL
 	help
 	  This enables userspace CPU Voltage Control
 
+config CPU_OVERCLOCK
+	bool "Enable CPU Overclocking option"
+	default n
+	help
+	  Enable CPU overclock for apq8064 socs
+
 config GPU_OVERCLOCK
 	bool "GPU Overclock"
 	default n
