defconfig: Disable CONFIG_NFS_FS
Signed-off-by: Kostas K <mpokwsths@gmail.com>

--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -501,10 +501,6 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
-CONFIG_NFS_FS=y
-CONFIG_NFS_V3=y
-CONFIG_NFS_V3_ACL=y
-CONFIG_NFS_V4=y
 CONFIG_CIFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
@@ -528,6 +524,7 @@ CONFIG_KERNEL_XZ=y
 CONFIG_RD_XZ=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_CROSS_MEMORY_ATTACH=n
+CONFIG_NFS_FS=n
 
 CONFIG_MACH_APQ8064_FLO=y
 CONFIG_MACH_APQ8064_DEB=n
