msm: pm: Rename pm-8x60.c to msm-pm.c
Rename the PM drivers so that SPC is not turned off by mpdecision

Signed-off-by: Kostas K <mpokwsths@gmail.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -132,7 +132,7 @@ config ARCH_MSM8X60
 	select MSM_SCM if SMP
 	select MULTI_IRQ_HANDLER
 	select MSM_MULTIMEDIA_USE_ION
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select MSM_RUN_QUEUE_STATS
 	select ARM_HAS_SG_CHAIN
 
@@ -164,7 +164,7 @@ config ARCH_MSM8960
 	select QCACHE
 	select MSM_MULTIMEDIA_USE_ION
 	select MULTI_IRQ_HANDLER
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select HOLES_IN_ZONE if SPARSEMEM
 	select MSM_RUN_QUEUE_STATS
 	select ARM_HAS_SG_CHAIN
@@ -198,7 +198,7 @@ config ARCH_MSM8930
 	select ARCH_HAS_HOLES_MEMORYMODEL
 	select MSM_ULTRASOUND
 	select MULTI_IRQ_HANDLER
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select HOLES_IN_ZONE if SPARSEMEM
 	select ARM_HAS_SG_CHAIN
 	select MSM_KRAIT_WFE_FIXUP
@@ -222,7 +222,7 @@ config ARCH_APQ8064
 	select MSM_RPM
 	select MSM_SPM_V2
 	select MSM_L2_SPM
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select CPU_HAS_L2_PMU
 	select HOLES_IN_ZONE if SPARSEMEM
 	select CLEANCACHE
@@ -247,7 +247,7 @@ config ARCH_MSM8974
 	select MSM_PIL
 	select MSM_SPM_V2
 	select MSM_L2_SPM
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select MAY_HAVE_SPARSE_IRQ
 	select SPARSE_IRQ
 	select MSM_RPM_SMD
@@ -285,7 +285,7 @@ config ARCH_MSM8226
 	select MSM_PIL
 	select MSM_SPM_V2
 	select MSM_L2_SPM
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select MAY_HAVE_SPARSE_IRQ
 	select SPARSE_IRQ
 	select MSM_RPM_SMD
@@ -320,7 +320,7 @@ config ARCH_MSM9615
 	select REGULATOR
 	select MSM_RPM_REGULATOR
 	select MULTI_IRQ_HANDLER
-	select MSM_PM8X60 if PM
+	select MSM_PM if PM
 	select MSM_XO
 	select MSM_MULTIMEDIA_USE_ION
 	select MSM_QDSP6_APR
@@ -2072,7 +2072,7 @@ config MSM_PM2
 	depends on PM
 	bool
 
-config MSM_PM8X60
+config MSM_PM
 	depends on PM
 	bool
 
