--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -531,9 +531,10 @@ CONFIG_MACH_APQ8064_DEB=n
 CONFIG_STRICT_MEMORY_RWX=n
 CONFIG_FB_MSM_TRIPLE_BUFFER=n
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
+CONFIG_CPU_OVERCLOCK=y
 CONFIG_GPU_OVERCLOCK=n
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MAX=1728000
 CONFIG_MSM_CPU_FREQ_MIN=384000
 
 CONFIG_KALLSYMS_ALL=n
