--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -536,6 +536,8 @@ CONFIG_GPU_OVERCLOCK=n
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1728000
 CONFIG_MSM_CPU_FREQ_MIN=384000
+CONFIG_DIAG_CHAR=n
+CONFIG_DIAG_OVER_USB=n
 
 CONFIG_KALLSYMS_ALL=n
 CONFIG_KALLSYMS=n
