defconfig: Disable CONFIG_COREDUMP
Signed-off-by: Kostas K <mpokwsths@gmail.com>

--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -523,6 +523,7 @@ CONFIG_KERNEL_XZ=y
 CONFIG_RD_XZ=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_CROSS_MEMORY_ATTACH=n
+CONFIG_COREDUMP=n
 CONFIG_NFS_FS=n
 
 CONFIG_MACH_APQ8064_FLO=y
